...
                            <constraint firstItem="wxO-VD-RtQ" firstAttribute="leading" secondItem="aC4-aC-XNL" secondAttribute="leadingMargin" id="IYu-Qm-BYx"/>
                            <constraint firstItem="wxO-VD-RtQ" firstAttribute="top" secondItem="PRX-IR-O69" secondAttribute="bottom" id="jEm-Aa-h9D"/>
                            <constraint firstItem="4we-kY-16L" firstAttribute="top" secondItem="wxO-VD-RtQ" secondAttribute="bottom" id="jFl-aA-nxq"/>
                            <constraint firstAttribute="trailingMargin" secondItem="wxO-VD-RtQ" secondAttribute="trailing" id="nWj-OI-N8d"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="About" largeTitleDisplayMode="never" id="pNg-fl-W50">
                        <barButtonItem key="rightBarButtonItem" title="Source Code" id="Tgj-Qe-BXs">
                            <connections>
                                <action selector="githubProfile:" destination="xbZ-T9-uTW" id="gzG-Pw-KRd"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
                            <constraint firstItem="OSa-L1-HXs" firstAttribute="bottom" secondItem="8bC-Xf-vdC" secondAttribute="bottomMargin" id="WZX-jZ-r3x"/>
                            <constraint firstItem="OSa-L1-HXs" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="Y5E-Yf-iOs"/>
                            <constraint firstItem="OSa-L1-HXs" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="10" id="kJg-IK-EP5"/>
                            <constraint firstItem="OSa-L1-HXs" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="lS2-7V-rQW"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="IP Validator" largeTitleDisplayMode="always" id="2pd-gS-vqk">
                        <barButtonItem key="leftBarButtonItem" title="About" id="Fad-BN-lBI">
                            <connections>
                                <segue destination="xbZ-T9-uTW" kind="show" id="FNA-ns-O1u"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Validate" id="R6B-8a-sEl">
                            <connections>
                                <segue destination="V74-Q7-wZc" kind="show" id="CfV-vD-5Gc"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
                        <connections>
                            <outlet property="dataSource" destination="V74-Q7-wZc" id="NZD-iu-OLq"/>
                            <outlet property="delegate" destination="V74-Q7-wZc" id="1pK-4l-23n"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Results" largeTitleDisplayMode="never" id="QqD-jL-32a">
                        <barButtonItem key="rightBarButtonItem" title="Export" id="Ezb-tO-SRW">
                            <connections>
                                <segue destination="ecm-x3-BV3" kind="show" id="jHq-aQ-x89"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                </tableViewController>
...
                            <constraint firstItem="psD-Hm-Iuo" firstAttribute="bottom" secondItem="13B-SN-15N" secondAttribute="top" id="Nk8-aD-AM5"/>
                            <constraint firstAttribute="trailingMargin" secondItem="psD-Hm-Iuo" secondAttribute="trailing" id="QtU-AB-EZj"/>
                            <constraint firstAttribute="leadingMargin" secondItem="psD-Hm-Iuo" secondAttribute="leading" id="r7S-j9-vhM"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="DNS &amp; Gateway Config" id="9UZ-kG-ZWY">
                        <barButtonItem key="rightBarButtonItem" title="Next" id="lRh-kj-9b7">
                            <connections>
                                <segue destination="1TN-WW-bLM" kind="show" id="b35-Hw-1hh"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
