...
	}
	
	@IBAction func formatAction(_ sender: AnyObject) {
		let alert = UIAlertController(title: "Menu", message: nil, preferredStyle: .actionSheet);
		
		
		alert.addAction(UIAlertAction(title: "Share", style: .default, handler: { (_) in
			let objectsToShare = [self.textField.attributedText,URL(string: "https://www.mekatrotekno.com/")] as [Any]
			let activityVC = UIActivityViewController(activityItems: objectsToShare, applicationActivities: nil)
//			activityVC.excludedActivityTypes = [UIActivityType.airDrop]
			activityVC.popoverPresentationController?.barButtonItem = self.formatButton
			self.present(activityVC, animated: true, completion: nil)
		}))
...
