//
//  ipValidatorUITests.swift
//  ipValidatorUITests
//
//  Created by Muhammet Mehmet Emin Kartal on 05/09/2017.
//  Copyright © 2017 mehmet. All rights reserved.
//

import XCTest

class ipValidatorUITests: XCTestCase {
        
    override func setUp() {
        super.setUp()
        
        // Put setup code here. This method is called before the invocation of each test method in the class.
        
        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false
        // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
        XCUIApplication().launch()

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }
    
    override func tearDown() {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
        super.tearDown()
    }
    
    func testExample() {
        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
		
		let app = XCUIApplication()
		let ipValidatorNavigationBar = app.navigationBars["IP Validator"]
		ipValidatorNavigationBar.buttons["About"].tap()
		
		let navigationBarsQuery = app.navigationBars
		navigationBarsQuery.buttons["IP Validator"].tap()
		ipValidatorNavigationBar.buttons["Validate"].tap()
		navigationBarsQuery.buttons["Export"].tap()
		navigationBarsQuery.buttons["Next"].tap()
		navigationBarsQuery.buttons["Share"].tap()

		
		
    }
    
}
